# python-interview

./: .gitignore  README.md  input_data.txt  pyproject.toml
src/crawler/: __main__.py
tests/: test_main.py
