[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "yarl>=1.23.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "pyright>=1.1.408",
    "ruff>=0.15.4",
]
tests = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
